--- a/sitio-html/el-mas-veloz.html
+++ b/sitio-html/el-mas-veloz.html
@@ -69,12 +69,78 @@
       </li>
     </ul>
   </header>
+  <header class="HeroImage" style="
+            --bg-url: url(../img/header-fastest-man-alive.jpg);
+            --bg-attach: fixed;
+            --bg-size: cover;
+            --bg-x: center;
+            --bg-y: center;
+          ">
+    <div>
+      <h2>
+        <span>EL HOMBRE</span>
+        <span>MÁS RÁPIDO VIVO</span>
+      </h2>
+    </div>
+  </header>
   <main>
-    <h1>El más veloz</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, dicta quibusdam blanditiis nemo quae dignissimos placeat tempora
-      temporibus rem ea neque, magni, aspernatur quis in beatae mollitia animi dolorum alias?
-    </p>
+    <section class="HeroBio container">
+      <div class="row">
+        <div class="col s12">
+          <img class="responsive-img" src="./img/eluid-kipchoge-1.jpg" alt="Eluid Kipchoge">
+        </div>
+        <div class="col s12">
+          <h2 class="center">Eluid Kipchoge</h2>
+        </div>
+        <div class="col s12 l6">
+          <p>
+            No, no es Flash, tampoco Usain Bolt, él es un
+            <b>Velocista</b>, especialista en
+            <b>cortas distancias</b> en el
+            <b>menor tiempo</b> posible; pero para ser el más rápido se requiere
+            <b>resistencia</b> y
+            <b>velocidad constante</b> en
+            <b>largas distancias</b> que sólo un
+            <b>Fondista</b> puede lograr.
+          </p>
+        </div>
+        <div class="col s12 l6">
+          <img class="responsive-img" src="./img/eluid-kipchoge-2.jpg" alt="Eluid Kipchoge">
+        </div>
+        <div class="col s12">
+          <p>
+            Por naturaleza el ser humano es un
+            <b>corredor de fondo</b>, la manera en que cazaban nuestros ancestros era persiguiendo a la presa hasta matarla
+            de cansancio. En los último años los maratonistas profesionales se han obsesionado por reducir el tiempo de la
+            maratón a
+            <b>menos de 2 horas</b>.
+          </p>
+          <p>
+            El
+            <b>6 de mayo de 2017</b> el keniata
+            <b>Eluid Kipchoge</b> en complicidad con
+            <b>Nike</b> y otros corredores, realizaron un experimento llamado
+            <b>Breaking 2</b>, con el objetivo de lograr la hazaña.
+          </p>
+        </div>
+        <div class="col s12 l6">
+          <img class="responsive-img" src="./img/eluid-kipchoge-3.jpg" alt="Eluid Kipchoge">
+        </div>
+        <div class="col s12 l6">
+          <p>
+            El evento se realizo en el autódromo de Monza, en Italia. Kipchoge corrió la distancia de
+            <b>42.195km</b> en
+            <b>2:00:25</b>hrs. Aunque le faltaron 26 segundos y el evento no fue oficial, esta hazaña lo convierte en el hombre
+            más rápido vivo.
+          </p>
+        </div>
+        <div class="col s12">
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/V2ZLG-Fij_4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="container">
