--- a/sitio-html/index.html
+++ b/sitio-html/index.html
@@ -70,6 +70,20 @@
       </li>
     </ul>
   </header>
+  <header class="HeroImage" style="
+    --bg-url: url(../img/header-home.jpg);
+    --bg-attach: fixed;
+    --bg-size: cover;
+    --bg-x: center;
+    --bg-y: center;
+  ">
+    <div>
+      <h2>
+        <span>Si entrenas tu mente para correr,</span>
+        <span>todo lo demás será fácil.</span>
+      </h2>
+    </div>
+  </header>
   <main>
     <article class="Sentence">
       <blockquote class="container">
