--- a/sitio-html/maratones.html
+++ b/sitio-html/maratones.html
@@ -69,10 +69,195 @@
       </li>
     </ul>
   </header>
+  <header class="HeroImage" style="
+        --bg-url: url(../img/header-marathons.jpg);
+        --bg-attach: fixed;
+        --bg-size: cover;
+        --bg-x: 75%;
+        --bg-y: center;
+      ">
+    <div>
+      <h2>
+        <span>A B B O T T W o r l d</span>
+        <span>Marathon Majors</span>
+      </h2>
+    </div>
+  </header>
   <main>
-    <h2>Maratones</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi itaque voluptatibus doloremque dolore corporis dicta
-      libero consequatur laudantium voluptas accusamus nulla quaerat at aliquam, amet, ex repudiandae? Sit, blanditiis perferendis?</p>
+    <article class="MarathonsLogos container">
+      <p class="flow-text">
+        El
+        <b>
+          <i>Abbott World Marathon Majors</i>
+        </b> es una serie compuesta por seis de los maratones más grandes y famosos del mundo. Las carreras tienen lugar en Tokio,
+        Boston, Londres, Berlín, Chicago y Nueva York.
+      </p>
+      <aside class="row">
+        <div class="col s4 m2">
+          <a href="http://www.marathon.tokyo/" target="_blank">
+            <img src="./img/marathons-tokyo-logo.png" alt="Maratón de Tokio" class="responsive-img">
+          </a>
+        </div>
+        <div class="col s4 m2">
+          <a href="http://www.baa.org/" target="_blank">
+            <img src="./img/marathons-boston-logo.jpg" alt="Maratón de Boston" class="responsive-img">
+          </a>
+        </div>
+        <div class="col s4 m2">
+          <a href="https://www.virginmoneylondonmarathon.com" target="_blank">
+            <img src="./img/marathons-london-logo.jpg" alt="Maratón de Londres" class="responsive-img">
+          </a>
+        </div>
+        <div class="col s4 m2">
+          <a href="http://www.bmw-berlin-marathon.com" target="_blank">
+            <img src="./img/marathons-berlin-logo.png" alt="Maratón de Berlín" class="responsive-img">
+          </a>
+        </div>
+        <div class="col s4 m2">
+          <a href="http://www.chicagomarathon.com" target="_blank">
+            <img src="./img/marathons-chicago-logo.png" alt="Maratón de Chicago" class="responsive-img">
+          </a>
+        </div>
+        <div class="col s4 m2">
+          <a href="http://www.tcsnycmarathon.org/" target="_blank">
+            <img src="./img/marathons-new-york-logo.jpg" alt="Maratón de Nueva York" class="responsive-img">
+          </a>
+        </div>
+      </aside>
+    </article>
+    <section class="MarathonsCards  container">
+      <div class="row">
+        <article class="col s12 m6 xl4">
+          <div class="card small">
+            <div class="card-image">
+              <img src="./img/marathons-tokyo-panorama.jpg">
+              <span class="card-title">Tokyo</span>
+            </div>
+            <div class="card-content">
+              <p>Desde 2007, se corre el último domingo de febrero.</p>
+            </div>
+            <div class="card-action right-align">
+              <a href="http://www.marathon.tokyo/" target="_blank">sitio web</a>
+            </div>
+          </div>
+        </article>
+        <article class="col s12 m6 xl4">
+          <div class="card small">
+            <div class="card-image">
+              <img src="./img/marathons-boston-panorama.jpg">
+              <span class="card-title">Boston</span>
+            </div>
+            <div class="card-content">
+              <p>Desde 1897, se corre el tercer lunes de abril.</p>
+            </div>
+            <div class="card-action right-align">
+              <a href="http://www.baa.org/" target="_blank">sitio web</a>
+            </div>
+          </div>
+        </article>
+        <article class="col s12 m6 xl4">
+          <div class="card small">
+            <div class="card-image">
+              <img src="./img/marathons-london-panorama.jpg">
+              <span class="card-title">Londres</span>
+            </div>
+            <div class="card-content">
+              <p>Desde 1981, se corre el último domingo de abril.</p>
+            </div>
+            <div class="card-action right-align">
+              <a href="https://www.virginmoneylondonmarathon.com/" target="_blank">sitio web</a>
+            </div>
+          </div>
+        </article>
+        <article class="col s12 m6 xl4">
+          <div class="card small">
+            <div class="card-image">
+              <img src="./img/marathons-berlin-panorama.jpg">
+              <span class="card-title">Berlín</span>
+            </div>
+            <div class="card-content">
+              <p>Desde 1974, se corre el último domingo de septiembre.</p>
+            </div>
+            <div class="card-action right-align">
+              <a href="http://www.bmw-berlin-marathon.com/" target="_blank">sitio web</a>
+            </div>
+          </div>
+        </article>
+        <article class="col s12 m6 xl4">
+          <div class="card small">
+            <div class="card-image">
+              <img src="./img/marathons-chicago-panorama.jpg">
+              <span class="card-title">Chicago</span>
+            </div>
+            <div class="card-content">
+              <p>Desde 1977, se corre el domingo antes del segundo lunes de octubre.</p>
+            </div>
+            <div class="card-action right-align">
+              <a href="https://www.chicagomarathon.com/" target="_blank">sitio web</a>
+            </div>
+          </div>
+        </article>
+        <article class="col s12 m6 xl4">
+          <div class="card small">
+            <div class="card-image">
+              <img src="./img/marathons-new-york-panorama.jpg">
+              <span class="card-title">Nueva York</span>
+            </div>
+            <div class="card-content">
+              <p>Desde 1970, se corre el primer domingo de noviembre.</p>
+            </div>
+            <div class="card-action right-align">
+              <a href="http://www.tcsnycmarathon.org/" target="_blank">sitio web</a>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
+    <section class="MarathonsSliders">
+      <div class="carousel">
+        <a class="carousel-item" href="http://www.marathon.tokyo/" target="_blank">
+          <img src="./img/marathons-tokyo-logo.png">
+        </a>
+        <a class="carousel-item" href="http://www.baa.org/" target="_blank">
+          <img src="./img/marathons-boston-logo.jpg">
+        </a>
+        <a class="carousel-item" href="https://www.virginmoneylondonmarathon.com/" target="_blank">
+          <img src="./img/marathons-london-logo.jpg">
+        </a>
+        <a class="carousel-item" href="http://www.bmw-berlin-marathon.com/" target="_blank">
+          <img src="./img/marathons-berlin-logo.png">
+        </a>
+        <a class="carousel-item" href="https://www.chicagomarathon.com/" target="_blank">
+          <img src="./img/marathons-chicago-logo.png">
+        </a>
+        <a class="carousel-item" href="http://www.tcsnycmarathon.org/" target="_blank">
+          <img src="./img/marathons-new-york-logo.jpg">
+        </a>
+      </div>
+      <div class="carousel carousel-slider">
+        <div class="carousel-fixed-item center">
+          <img src="./img/abbott-logo.svg" alt="ABBOTT" class="responsive-img">
+        </div>
+        <a class="carousel-item" href="http://www.marathon.tokyo/" target="_blank">
+          <img src="./img/marathons-tokyo-panorama.jpg">
+        </a>
+        <a class="carousel-item" href="http://www.baa.org/" target="_blank">
+          <img src="./img/marathons-boston-panorama.jpg">
+        </a>
+        <a class="carousel-item" href="https://www.virginmoneylondonmarathon.com/" target="_blank">
+          <img src="./img/marathons-london-panorama.jpg">
+        </a>
+        <a class="carousel-item" href="http://www.bmw-berlin-marathon.com/" target="_blank">
+          <img src="./img/marathons-berlin-panorama.jpg">
+        </a>
+        <a class="carousel-item" href="https://www.chicagomarathon.com/" target="_blank">
+          <img src="./img/marathons-chicago-panorama.jpg">
+        </a>
+        <a class="carousel-item" href="http://www.tcsnycmarathon.org/" target="_blank">
+          <img src="./img/marathons-new-york-panorama.jpg">
+        </a>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="container">
@@ -108,7 +293,6 @@
       </div>
     </div>
   </footer>
-
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   <script src="./js/script.js"></script>
