--- a/sitio-html/mujeres.html
+++ b/sitio-html/mujeres.html
@@ -69,10 +69,67 @@
       </li>
     </ul>
   </header>
+  <header class="HeroImage" style="
+          --bg-url: url(../img/header-women.jpg);
+          --bg-attach: fixed;
+          --bg-size: cover;
+          --bg-x: center;
+          --bg-y: top;
+        ">
+    <div>
+      <h2>
+        <span>M U J E R</span>
+        <span>M A R A V I L L A</span>
+      </h2>
+    </div>
+  </header>
   <main>
-    <h2>Mujeres</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi itaque voluptatibus doloremque dolore corporis dicta
-      libero consequatur laudantium voluptas accusamus nulla quaerat at aliquam, amet, ex repudiandae? Sit, blanditiis perferendis?</p>
+    <section class="HeroBio container">
+      <div class="row">
+        <div class="col s12">
+          <img class="responsive-img" src="./img/kathrine-switzer-1.jpg" alt="Kathrine Switzer">
+        </div>
+        <div class="col s12">
+          <h2 class="center">Kathrine Switzer</h2>
+        </div>
+        <div class="col s12 l6">
+          <p>
+            Kathrine Switzer fue la primera mujer en la historia en correr una maratón. Desafió las normas establecidas cuando en 1967
+            se inscribió como
+            <b>
+              <i>KV Switzer</i>
+            </b> y cruzó la línea de salida de la Maratón de Boston con el número
+            <b>261</b> como si fuera un corredor más.
+          </p>
+        </div>
+        <div class="col s12 l6">
+          <img class="responsive-img" src="./img/kathrine-switzer-2.jpg" alt="Kathrine Switzer">
+        </div>
+        <div class="col s12">
+          <p>
+            Pasó a la historia cuando uno de los jueces a mitad de la carrera se dio cuenta y saltó tras ella para detenerla, mientras
+            que su entrenador y su novio la defendían de éste, permitiéndole completar la carrera con un tiempo de
+            <b>4 horas y 20 minutos</b>. p 50 años después y teniendo 70, en 2017 regreso a correr la maratón de Boston con
+            su mítico número
+            <b>261</b>.
+          </p>
+        </div>
+        <div class="col s12 l6">
+          <img class="responsive-img" src="./img/kathrine-switzer-3.jpg" alt="Kathrine Switzer">
+        </div>
+        <div class="col s12 l6">
+          <p>
+            Gracias a ella, a partir de 1972, las mujeres tuvieron derecho a correr Maratones. También fue promotora para lograr que
+            se abriera la categoría femenil para la distancia en Juegos Olímpicos, meta que se conquistó en 1984.
+          </p>
+        </div>
+        <div class="col s12">
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/fOGXvBAmTsY" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="container">
